{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 37,
  "lineage": "49733056-beee-56ec-ff90-f7a7a1d05bcf",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.33.172",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-10-09T01:19:11.708-07:00",
            "id": "projects/prathamesh/regions/asia-south1/addresses/vm-public-address",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "prathamesh",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prathamesh/regions/asia-south1/addresses/vm-public-address"
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-09T01:19:00.589-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prathamesh/global/firewalls/hari-firewall-externalssh",
            "log_config": [],
            "name": "hari-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/prathamesh/global/networks/default",
            "priority": 1000,
            "project": "prathamesh",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prathamesh/global/firewalls/hari-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-10-09T01:19:00.472-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prathamesh/global/firewalls/hari-webserver",
            "log_config": [],
            "name": "hari-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/prathamesh/global/networks/default",
            "priority": 1000,
            "project": "prathamesh",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prathamesh/global/firewalls/hari-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20210916",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prathamesh/zones/asia-south1-a/disks/hari-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prathamesh/zones/asia-south1-a/instances/hari-vm",
            "instance_id": "8031846566250475108",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata": {
              "ssh-keys": "hari:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQDRs8yOH+Rwjiu61Y1qghK0+/4Dv0srJwa43khuxq4b8JccOd6qoJLWwhMqR8ED59JBgl/tTgu4wfOAzgYpyx5CJEvo3ybZHu7PyT3gEOAcsxY2wvDwKzRtxQ1xs0Roe8g7PR0pq02oAa/LcCthkM6feGfOJ0qKSkiqmTSRHKH1Lbg9ktG8nREVbPd887GFmJ1OlAevI01wPXZMGG58sZKO02yki4RLl28dPBm3MMbcxoS3l8JMm0UM6wd67lUo23QVPreTyHDqj7KfbpZpqeZhUTnfkvFiu2PuwhLbRoWJ5WNq6yQ3qCMJ0c98Vhbz+Uzkm2QbTd1owwjoGss6kbtX ec2-user@ip-172-31-17-156.us-east-2.compute.internal\n"
            },
            "metadata_fingerprint": "yio81GhBXBM=",
            "name": "hari-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.244.33.172",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prathamesh/global/networks/default",
                "network_ip": "10.160.0.5",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prathamesh/regions/asia-south1/subnetworks/default",
                "subnetwork_project": "prathamesh"
              }
            ],
            "project": "prathamesh",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prathamesh/zones/asia-south1-a/instances/hari-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "asia-south1-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    }
  ]
}